fix: map misalignment

--- a/client/src/components/Map/map.css
+++ b/client/src/components/Map/map.css
@@ -14,10 +14,6 @@
     font-size: 0.9rem;
   }
 
-  .map-ui ul {
-    padding-inline-start: 15px;
-  }
-
   .map-ui > ul {
     padding-inline-start: 0;
   }
